--- a/02_homework/style.css
+++ b/02_homework/style.css
@@ -1,21 +1,46 @@
-html, body {
-    font-family: serif;
+.container  {
+    width: 100%;
 }
 
-body {
-    margin: 20px;
+h1 {
+    font-size: 32px;
+    line-height: 36px;
 }
 
-pre {
-    display: block;
-    padding: 9.5px;
-    margin: 0 0 10px;
-    font-size: 13px;
-    line-height: 1.42857143;
-    color: #333;
-    word-break: break-all;
-    word-wrap: break-word;
-    background-color: #eff2f3;
-    border: 1px solid #d1dade;
-    border-radius: 2px;
+h2  {
+    font-size: 24px;
+}
+
+section {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px dashed #444;
+}
+
+.block {
+    width: 75px;
+    height: 75px;
+    margin: 25px;
+    border: 2px solid #333;
+}
+
+.active {
+    background: orange;
+}
+
+.hide {
+    display: none;
+}
+
+.img-12-min {
+    width: 64px;
+}
+
+.img-12-max {
+    width: 128px;    border: 3px solid #fff;
+
+}
+
+.active-img {
+    border: 3px solid black;
 }
